tests/sintax-semanth/should_fail/whileTypeChecking.tds
program
begin
    integer x,y;
    void main()
        begin
            x = 1;
            y = 20;
            while (x + y) begin
                x = x + 1;
            end
        end
end